--- a/bonus.html
+++ b/bonus.html
@@ -965,6 +965,36 @@
           </div>
         </div>
       </footer>
+      <style>
+        .card--1 .card__img, .card--1 .card__img--hover {
+    background-image: url('logo-travel.png') no-repeat;
+    background-size: 65%;
+}
+.card--2 .card__img, .card--2 .card__img--hover {
+  background-image: url('logo-i.png');
+  background-size: 65%;
+}
+.card--3 .card__img, .card--3 .card__img--hover {
+  background-image: url('logo-Farm.png');
+  background-size: 65%;
+}
+.card--4 .card__img, .card--4 .card__img--hover {
+  background-image: url('logo-efun.png');
+  background-size: 65%;
+}
+.card--6 .card__img, .card--6 .card__img--hover {
+  background-image: url('logo-excise.png');
+  background-size: 65%;
+}
+.card--7 .card__img, .card--7 .card__img--hover {
+  background-image: url('logo-ha.png');
+  background-size: 45%;
+}
+.card--8 .card__img, .card--8 .card__img--hover {
+  background-image: url('logo-local.png');
+  background-size: 65%;
+}
+      </style>
     </div>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
