--- a/bonus.html
+++ b/bonus.html
@@ -967,7 +967,7 @@
       </footer>
       <style>
         .card--1 .card__img, .card--1 .card__img--hover {
-    background-image: url('logo-travel.png') no-repeat;
+    background-image: url('logo-travel.png');
     background-size: 65%;
 }
 .card--2 .card__img, .card--2 .card__img--hover {
