--- a/bonus.html
+++ b/bonus.html
@@ -967,31 +967,31 @@
       </footer>
       <style>
         .card--1 .card__img, .card--1 .card__img--hover {
-    background-image: url('logo-travel.png');
+    background-image: url('./img/logo-travel.png');
     background-size: 65%;
 }
 .card--2 .card__img, .card--2 .card__img--hover {
-  background-image: url('logo-i.png');
+  background-image: url('./img/logo-i.png');
   background-size: 65%;
 }
 .card--3 .card__img, .card--3 .card__img--hover {
-  background-image: url('logo-Farm.png');
+  background-image: url('./img/logo-Farm.png');
   background-size: 65%;
 }
 .card--4 .card__img, .card--4 .card__img--hover {
-  background-image: url('logo-efun.png');
+  background-image: url('./img/logo-efun.png');
   background-size: 65%;
 }
 .card--6 .card__img, .card--6 .card__img--hover {
-  background-image: url('logo-excise.png');
+  background-image: url('./img/logo-excise.png');
   background-size: 65%;
 }
 .card--7 .card__img, .card--7 .card__img--hover {
-  background-image: url('logo-ha.png');
+  background-image: url('./img/logo-ha.png');
   background-size: 45%;
 }
 .card--8 .card__img, .card--8 .card__img--hover {
-  background-image: url('logo-local.png');
+  background-image: url('./img/logo-local.png');
   background-size: 65%;
 }
       </style>
